# API

./: .gitignore  README.md  api_login.py  data.py  get_cur_exchange_gold.py  get_cur_exchange_usd.py  pages.py  pyproject.toml  pytest.ini  report_api.html  report_đt.html  requirements.txt
.github/workflows/: automation.yml
api/: user_api.py
data/: data.py  user_payload.py
debug/: api_login.py  get_cur_exchange_gold.py  get_cur_exchange_usd.py
tests/: report.html  test_create_user.py  test_delete_user.py  test_get_user.py  test_update_user.py
utils/: config.py
