[project]
name = "qa-api-automation"
version = "1.0.0"
description = "API automation testing framework"
requires-python = ">=3.10"

dependencies = [
    "pytest",
    "requests",
    "faker",
    "allure-pytest",
    "python-dotenv",
    "dependencies>=7.7.1",
    "playwright>=1.58.0",
    "loguru>=0.7.3",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
